// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toast modal Matches the snapshot 1`] = `
<body>
  <div>
    <div
      class="toast toast--info"
    >
      <div
        class="toast__modal"
      >
        <span
          class="toast__message"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 90c44.3 0 86 17.3 117.4 48.6C404.7 170 422 211.7 422 256s-17.3 86-48.6 117.4C342 404.7 300.3 422 256 422s-86-17.3-117.4-48.6C107.3 342 90 300.3 90 256s17.3-86 48.6-117.4C170 107.3 211.7 90 256 90m0-42C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48z"
            />
            <path
              d="M277 360h-42V235h42v125zm0-166h-42v-42h42v42z"
            />
          </svg>
          Your request has been processed
        </span>
      </div>
      <span
        class="toast__bar"
      />
    </div>
  </div>
</body>
`;

exports[`Toast modal Renders variant: default 1`] = `
<body>
  <div>
    <div
      class="toast toast--info"
    >
      <div
        class="toast__modal"
      >
        <span
          class="toast__message"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 90c44.3 0 86 17.3 117.4 48.6C404.7 170 422 211.7 422 256s-17.3 86-48.6 117.4C342 404.7 300.3 422 256 422s-86-17.3-117.4-48.6C107.3 342 90 300.3 90 256s17.3-86 48.6-117.4C170 107.3 211.7 90 256 90m0-42C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48z"
            />
            <path
              d="M277 360h-42V235h42v125zm0-166h-42v-42h42v42z"
            />
          </svg>
          Your request has been processed
        </span>
      </div>
      <span
        class="toast__bar"
      />
    </div>
  </div>
</body>
`;

exports[`Toast modal Renders variant: error 1`] = `
<body>
  <div>
    <div
      class="toast toast--error"
    >
      <div
        class="toast__modal"
      >
        <span
          class="toast__message"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
            />
          </svg>
          There has been an error with your request
        </span>
      </div>
      <span
        class="toast__bar"
      />
    </div>
  </div>
</body>
`;

exports[`Toast modal Renders variant: info 1`] = `
<body>
  <div>
    <div
      class="toast toast--info"
    >
      <div
        class="toast__modal"
      >
        <span
          class="toast__message"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 90c44.3 0 86 17.3 117.4 48.6C404.7 170 422 211.7 422 256s-17.3 86-48.6 117.4C342 404.7 300.3 422 256 422s-86-17.3-117.4-48.6C107.3 342 90 300.3 90 256s17.3-86 48.6-117.4C170 107.3 211.7 90 256 90m0-42C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48z"
            />
            <path
              d="M277 360h-42V235h42v125zm0-166h-42v-42h42v42z"
            />
          </svg>
          Your request has been processed
        </span>
      </div>
      <span
        class="toast__bar"
      />
    </div>
  </div>
</body>
`;

exports[`Toast modal Renders variant: post added 1`] = `
<body>
  <div>
    <div
      class="toast toast--info"
    >
      <div
        class="toast__modal"
      >
        <span
          class="toast__message"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M256 90c44.3 0 86 17.3 117.4 48.6C404.7 170 422 211.7 422 256s-17.3 86-48.6 117.4C342 404.7 300.3 422 256 422s-86-17.3-117.4-48.6C107.3 342 90 300.3 90 256s17.3-86 48.6-117.4C170 107.3 211.7 90 256 90m0-42C141.1 48 48 141.1 48 256s93.1 208 208 208 208-93.1 208-208S370.9 48 256 48z"
            />
            <path
              d="M277 360h-42V235h42v125zm0-166h-42v-42h42v42z"
            />
          </svg>
          New post has been added
        </span>
      </div>
      <span
        class="toast__bar"
      />
    </div>
  </div>
</body>
`;

exports[`Toast modal Renders variant: success 1`] = `
<body>
  <div>
    <div
      class="toast toast--success"
    >
      <div
        class="toast__modal"
      >
        <span
          class="toast__message"
        >
          <svg
            fill="currentColor"
            height="1em"
            role="img"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 0C5.383 0 0 5.383 0 12s5.383 12 12 12 12-5.383 12-12h-2.7c0 5.128-4.172 9.3-9.3 9.3-5.128 0-9.3-4.172-9.3-9.3 0-5.128 4.172-9.3 9.3-9.3V0Zm7.4 2.583-7.505 9.371L8.388 9.08l-2.002 2.436 4.741 3.888a1.573 1.573 0 0 0 2.231-.233l8.504-10.617L19.4 2.583Z"
            />
          </svg>
          Your request has been successful
        </span>
      </div>
      <span
        class="toast__bar"
      />
    </div>
  </div>
</body>
`;

exports[`Toast modal Renders variant: warning 1`] = `
<body>
  <div>
    <div
      class="toast toast--warning"
    >
      <div
        class="toast__modal"
      >
        <span
          class="toast__message"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M228.9 79.9L51.8 403.1C40.6 423.3 55.5 448 78.9 448h354.3c23.3 0 38.2-24.7 27.1-44.9L283.1 79.9c-11.7-21.2-42.5-21.2-54.2 0zM273.6 214L270 336h-28l-3.6-122h35.2zM256 402.4c-10.7 0-19.1-8.1-19.1-18.4s8.4-18.4 19.1-18.4 19.1 8.1 19.1 18.4-8.4 18.4-19.1 18.4z"
            />
          </svg>
          Your request was successful, but should be doublechecked.
        </span>
      </div>
      <span
        class="toast__bar"
      />
    </div>
  </div>
</body>
`;
